# rust-elfloader

./: AUTHORS  Cargo.toml  README.md
.github/workflows/: standard.yml
src/: binary.rs  elf.rs  lib.rs  test.rs  types.rs
src/arch/: mod.rs  test.rs  x86.rs  x86_64.rs
src/arch/aarch64/: mod.rs  test.rs
src/arch/arm/: mod.rs
src/arch/riscv/: mod.rs  test.rs
src/arch/x86/: mod.rs  test.rs
src/arch/x86_64/: mod.rs  test.rs
test/: test.aarch64  test.c  test.riscv64  test_nopie.aarch64  test_nopie.riscv64  tls.aarch64  tls.c  tls.riscv64
