[package]
name = "elfloader"
version = "0.12.0"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>", "Christopher Cole <chris.cole.09@gmail.com>", "John Kåre Alsaker <john.kare.alsaker@gmail.com>", "Benedikt Radtke <Trolldemorted@users.noreply.github.com>"]
repository = "https://github.com/gz/rust-elfloader"
license = "MIT/Apache-2.0"
description = "A rust library to load ELF files."
keywords = ["elf", "x86", "os"]
readme = "README.md"
edition = "2018"

[dependencies]
log = "0.4"
xmas-elf = "0.7"
bitflags = "1.2"

[target.'cfg(target_family = "unix")'.dev-dependencies]
env_logger = "0.8.4"
